tests/dataset/tpc-ds/compiler/erlang/q12.error
run: exit status 127
escript: exception error: bad key: ws_ext_sales_price
  in function  map_get/2
     called as map_get(ws_ext_sales_price,
                       #{i =>
                             #{i_item_sk => 1,i_item_id => "ITEM1",
                               i_item_desc => "Item One",i_category => "A",
                               i_class => "C1",i_current_price => 10},
                         ws =>
                             #{ws_item_sk => 1,ws_sold_date_sk => 2,
                               ws_ext_sales_price => 100},
                         d => #{d_date_sk => 2,d_date => "2001-02-05"}})
     *** argument 1: not present in map
  in call from q12_erl__escript__1752__561062__931282__8964:'-main/1-lc$^5/1-1-'/1 (/tmp/q12.erl, line 9)
  in call from q12_erl__escript__1752__561062__931282__8964:'-main/1-lc$^4/1-0-'/1 (/tmp/q12.erl, line 9)
  in call from q12_erl__escript__1752__561062__931282__8964:main/1 (/tmp/q12.erl, line 9)
  in call from escript:run/2 (escript.erl, line 904)
  in call from escript:start/1 (escript.erl, line 418)
  in call from init:start_it/1 
  in call from init:start_em/1 
