tests/dataset/tpc-ds/compiler/erlang/q12.erl
#!/usr/bin/env escript
% Generated by Mochi compiler v0.10.26 on 2025-07-15T07:25:41Z
% q12.erl - generated from q12.mochi

main(_) ->
    Web_sales = [#{ws_item_sk => 1, ws_sold_date_sk => 1, ws_ext_sales_price => 100}, #{ws_item_sk => 1, ws_sold_date_sk => 2, ws_ext_sales_price => 100}, #{ws_item_sk => 2, ws_sold_date_sk => 2, ws_ext_sales_price => 200}, #{ws_item_sk => 3, ws_sold_date_sk => 3, ws_ext_sales_price => 50}],
    Item = [#{i_item_sk => 1, i_item_id => "ITEM1", i_item_desc => "Item One", i_category => "A", i_class => "C1", i_current_price => 10}, #{i_item_sk => 2, i_item_id => "ITEM2", i_item_desc => "Item Two", i_category => "A", i_class => "C1", i_current_price => 20}, #{i_item_sk => 3, i_item_id => "ITEM3", i_item_desc => "Item Three", i_category => "B", i_class => "C2", i_current_price => 30}],
    Date_dim = [#{d_date_sk => 1, d_date => "2001-01-20"}, #{d_date_sk => 2, d_date => "2001-02-05"}, #{d_date_sk => 3, d_date => "2001-03-05"}],
    Filtered = [#{i_item_id => mochi_get(id, Key0), i_item_desc => mochi_get(desc, Key0), i_category => mochi_get(cat, Key0), i_class => mochi_get(class, Key0), i_current_price => mochi_get(price, Key0), itemrevenue => lists:sum([mochi_get(ws_ext_sales_price, X) || X <- Val0])} || {Key0, Val0} <- maps:to_list(lists:foldl(fun({Key0, Val0}, Acc0) -> L = maps:get(Key0, Acc0, []), maps:put(Key0, [Val0 | L], Acc0) end, #{}, [{#{id => mochi_get(i_item_id, I), desc => mochi_get(i_item_desc, I), cat => mochi_get(i_category, I), class => mochi_get(i_class, I), price => mochi_get(i_current_price, I)}, #{ws => Ws, i => I, d => D}} || Ws <- Web_sales, I <- Item, D <- Date_dim, (mochi_get(ws_item_sk, Ws) == mochi_get(i_item_sk, I)), (mochi_get(ws_sold_date_sk, Ws) == mochi_get(d_date_sk, D)), ((lists:member(mochi_get(i_category, I), ["A", "B", "C"]) andalso (mochi_get(d_date, D) >= "2001-01-15")) andalso (mochi_get(d_date, D) =< "2001-02-14"))]))],
    Class_totals = [#{class => Key1, total => lists:sum([mochi_get(itemrevenue, X) || X <- Val1])} || {Key1, Val1} <- maps:to_list(lists:foldl(fun({Key1, Val1}, Acc1) -> L = maps:get(Key1, Acc1, []), maps:put(Key1, [Val1 | L], Acc1) end, #{}, [{mochi_get(i_class, F), F} || F <- Filtered]))],
    Result = [V || {_, V} <- lists:keysort(1, [{[mochi_get(i_category, F), mochi_get(i_class, F), mochi_get(i_item_id, F), mochi_get(i_item_desc, F)], #{i_item_id => mochi_get(i_item_id, F), i_item_desc => mochi_get(i_item_desc, F), i_category => mochi_get(i_category, F), i_class => mochi_get(i_class, F), i_current_price => mochi_get(i_current_price, F), itemrevenue => mochi_get(itemrevenue, F), revenueratio => (((mochi_get(itemrevenue, F) * 100)) / mochi_get(total, T))}} || F <- Filtered, T <- Class_totals, (mochi_get(i_class, F) == mochi_get(class, T))])],
    mochi_json(Result),
    (case (Result == [#{i_item_id => "ITEM1", i_item_desc => "Item One", i_category => "A", i_class => "C1", i_current_price => 10, itemrevenue => 200, revenueratio => 50}, #{i_item_id => "ITEM2", i_item_desc => "Item Two", i_category => "A", i_class => "C1", i_current_price => 20, itemrevenue => 200, revenueratio => 50}]) of true -> ok; _ -> erlang:error(test_failed) end).

mochi_get(K, M) ->
    case maps:find(K, M) of
        {ok, V} -> V;
        error ->
            Name = atom_to_list(K),
            case string:tokens(Name, "_") of
                [Pref|_] ->
                    P = list_to_atom(Pref),
                    case maps:find(P, M) of
                        {ok, Sub} when is_map(Sub) -> maps:get(K, Sub, undefined);
                        _ -> undefined
                    end;
                _ -> undefined
            end
        end.
    
    mochi_escape_json([]) -> [];
    mochi_escape_json([H|T]) ->
        E = case H of
            $\ -> "\\";
            $" -> "\"";
            _ -> [H]
        end,
        E ++ mochi_escape_json(T).
    
    mochi_to_json(true) -> "true";
    mochi_to_json(false) -> "false";
    mochi_to_json(V) when is_integer(V); is_float(V) -> lists:flatten(io_lib:format("~p", [V]));
    mochi_to_json(V) when is_binary(V) -> "\"" ++ mochi_escape_json(binary_to_list(V)) ++ "\"";
    mochi_to_json(V) when is_list(V), (V =:= [] orelse is_integer(hd(V))) -> "\"" ++ mochi_escape_json(V) ++ "\"";
    mochi_to_json(V) when is_list(V) -> "[" ++ lists:join(",", [mochi_to_json(X) || X <- V]) ++ "]";
    mochi_to_json(V) when is_map(V) -> "{" ++ lists:join(",", ["\"" ++ atom_to_list(K) ++ "\":" ++ mochi_to_json(Val) || {K,Val} <- maps:to_list(V)]) ++ "}".
    
    mochi_json(V) -> io:format("~s
", [mochi_to_json(V)]).
